# armish-fireplace

./: CMakeLists.txt  README.md  actions.cpp  actions.hpp  armish_fireplace.cpp  common.hpp  docs.doxy
buffer/: buffer_item.cpp  buffer_item.hpp  queue_buffer.cpp  queue_buffer.hpp
cmake/: uninstall.cmake
module/: imodule.cpp  imodule.hpp  iproc_unit.cpp  iproc_unit.hpp  module_list.hpp  module_manager.cpp  module_manager.hpp
module/brazil/: brazil.cpp  brazil.hpp  itrx_proc_unit.hpp
module/brazil/proc_unit/: bobwire_circuit.cpp  bobwire_circuit.hpp  lcc_and_fpga.cpp  lcc_and_fpga.hpp  trx_circuit.cpp  trx_circuit.hpp
module/trabea/: iswitch_proc_unit.cpp  iswitch_proc_unit.hpp  trabea.cpp  trabea.hpp
module/trabea/proc_unit/: circulator_switch.cpp  circulator_switch.hpp
net/: global_zcontext.cpp  global_zcontext.hpp  request.hpp  response.hpp  server.hpp  tcp_client.hpp
net/middleware/: request.hpp  response.hpp  server.cpp  server.hpp  zmq_server.cpp  zmq_server.hpp
net/simulation/: client.cpp  client.hpp  request.cpp  request.hpp  response.cpp  response.hpp
